--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <button data-op="+" class="operasi">+</button>
         <button class="kosong"></button>
         <button data-key="0" class="key">0</button>
-        <button class="decimal">,</button>
+        <button class="decimal">.</button>
         <button class="equal">=</button>
       </div>
     </div>
